DCJ-660: Consolidate logger usage (#2400)