@@ -8,13 +8,10 @@ import java.util.Objects;
 import java.util.Optional;
 import org.apache.commons.text.StringEscapeUtils;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
+import org.broadinstitute.consent.http.util.ConsentLogger;
 import org.jdbi.v3.core.result.RowView;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-public interface RowMapperHelper {
-
-  Logger log = LoggerFactory.getLogger(RowMapperHelper.class);
+public interface RowMapperHelper extends ConsentLogger {
 
   @SuppressWarnings({"rawtypes", "unchecked"})
   /*
@@ -29,7 +26,7 @@ public interface RowMapperHelper {
     try {
       return rowView.getColumn(columnName, clazz) != null;
     } catch (Exception e) {
-      log.debug("RowView does not contain column " + columnName);
+      logDebug("RowView does not contain column %s".formatted(columnName));
       return false;
     }
   }
@@ -45,7 +42,7 @@ public interface RowMapperHelper {
     try {
       return rowView.getColumn(columnName, Integer.class) != null && rowView.getColumn(columnName, Integer.class) > 0;
     } catch (Exception e) {
-      log.debug("RowView does not contain column " + columnName);
+      logDebug("RowView does not contain column %s".formatted(columnName));
       return false;
     }
   }
@@ -62,7 +59,7 @@ public interface RowMapperHelper {
     try {
       return Optional.of(rowView.getColumn(columnName, clazz));
     } catch (Exception e) {
-      log.debug(String.format("RowView does not contain column %s", columnName));
+      logDebug("RowView does not contain column %s".formatted(columnName));
       return Optional.empty();
     }
   }
@@ -121,8 +118,7 @@ public interface RowMapperHelper {
       try {
         data = DataAccessRequestData.fromString(escapedDataString);
       } catch (JsonSyntaxException | NullPointerException e) {
-        String message = "Unable to parse Data Access Request; error: " + e.getMessage();
-        log.error(message);
+        logDebug("Unable to parse Data Access Request; error: %s".formatted(e.getMessage()));
         throw e;
       }
     }
